# lcolachat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  server.rs
ui/: lcolachat.slint  types.slint
ui/views/: chat.slint  connect.slint  home.slint  host.slint  text.slint
